# Galaxy_benchmark

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BioAgent_Experiments.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Journal.md  Makefile  README.md  SKILL.md  experiment_prompt_index.json  postmortem.md  pyproject.toml  task_complexity_rubric.json
BioAgent_Experiments/: import_status.json
benchmark/: suites.json
docs/: agent_eval_instructions_formats_gaps.md  baselines.md  benchmark.md  benchmark_card.md  benchmark_methodology.md  benchmark_overview.md  dataset_governance_manifest.json  evaluation.md  evaluation_protocol.md  execution_trace_contract.md  experimental_matrix.md  failure_taxonomy.md  formal_score_model.md  migration_from_main.md  prompt_tiers.md  publication_release.md  publication_results_bundle.json  publication_results_source.json  publication_results_summary.md  reviewer_readiness.md  scoring.md  task_families.md  task_source_crosswalk.md
evaluators/: experiment_1.json  experiment_10.json  experiment_11.json  experiment_2.json  experiment_3.json  experiment_4.json  experiment_5.json  experiment_6.json  experiment_7.json  experiment_8.json  experiment_9.json
experiments/: experiment_1.json  experiment_2.json  experiment_3.json  experiment_4.json  experiment_8.json
ground_truth/: experiment_1.json  experiment_10.json  experiment_11.json  experiment_2.json  experiment_3.json  experiment_4.json  experiment_5.json  experiment_6.json  experiment_7.json  experiment_8.json  experiment_9.json
outputs/: .current_experiment_5_run  README.md  task_scores.md
project_spec/: IMPLEMENTATION_GUIDE.md  PROJECT_SPEC.md  README.md
runs/: README.md
scripts/: build_prompt_variants.py  generate_galaxy_limitation_figures.py  migrate_legacy_experiments.py  summarize_runs.py  validate_tasks.py
tests/: test_migrate_legacy_experiments.py
(+3591 files in other folders)
