[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-benchmark"
version = "0.1.0"
description = "Benchmark platform for evaluating AI agents in Galaxy."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "OpenAI Codex"}
]
dependencies = [
  "bioblend>=1.7.0",
  "httpx>=0.28.1",
  "pydantic>=2.12.0",
  "rich>=14.0.0",
  "typer>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.0.0",
  "pandas>=2.0.0",
  "pydantic-settings>=2.0.0",
  "pytest>=9.0.0",
  "pytest-mock>=3.14.0",
  "respx>=0.22.0",
  "tenacity>=9.0.0",
]

[project.scripts]
galaxy-bench = "galaxy_benchmark.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
